--- a/app/src/main/res/layout/fragment_form.xml
+++ b/app/src/main/res/layout/fragment_form.xml
@@ -1,15 +1,138 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".FormFragment">
 
-    <!-- TODO: Update blank fragment layout -->
-    <TextView
-        android:textSize="@dimen/h1"
+    <ScrollView
+        android:layout_above="@+id/btnSave"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:text="thes is FormFeagment" />
+        android:layout_height="match_parent">
 
-</FrameLayout>
+        <LinearLayout
+            android:layout_margin="@dimen/margin1"
+            android:orientation="vertical"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
+
+            <!--name-->
+            <TextView
+                android:textColor="#004d40"
+                android:layout_marginTop="30dp"
+                android:textStyle="bold"
+                android:textSize="@dimen/h2"
+                android:text="@string/Name"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent" />
+
+            <EditText
+                android:id="@+id/edtName"
+                android:inputType="text"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content" />
+
+            <!--Surname-->
+            <TextView
+                android:textColor="#004d40"
+                android:layout_marginTop="20dp"
+                android:textStyle="bold"
+                android:textSize="@dimen/h2"
+                android:text="@string/Surname"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent" />
+
+            <EditText
+                android:id="@+id/edtSurname"
+                android:layout_marginTop="8dp"
+                android:inputType="text"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content" />
+
+            <!--Gender-->
+            <TextView
+                android:textColor="#004d40"
+                android:layout_marginTop="20dp"
+                android:textStyle="bold"
+                android:textSize="@dimen/h2"
+                android:text="gender :"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content" />
+
+            <RadioGroup
+                android:id="@+id/ragGender"
+                android:layout_marginTop="8dp"
+                android:orientation="horizontal"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content">
+
+                <RadioButton
+                    android:textColor="#004d40"
+                    android:id="@+id/radMale"
+                    android:text="@string/Male"
+                    android:textStyle="bold"
+                    android:layout_weight="1"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content" />
+
+                <RadioButton
+                    android:textColor="#004d40"
+                    android:id="@+id/radFamale"
+                    android:text="@string/Female"
+                    android:textStyle="bold"
+                    android:layout_weight="1"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content" />
+
+            </RadioGroup>
+
+            <!--Age-->
+            <TextView
+                android:textColor="#004d40"
+                android:textStyle="bold"
+                android:textSize="@dimen/h2"
+                android:text="@string/Age"
+                android:layout_marginTop="20dp"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content" />
+
+            <Spinner
+                android:textColor="#004d40"
+                android:id="@+id/spnAge"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"/>
+
+            <!--stature-->
+           <TextView
+               android:textColor="#004d40"
+               android:textStyle="bold"
+               android:textSize="@dimen/h2"
+               android:text="@string/Stature"
+               android:layout_marginTop="20dp"
+               android:layout_width="wrap_content"
+               android:layout_height="wrap_content" />
+
+            <Spinner
+                android:textColor="#004d40"
+                android:id="@+id/spnStature"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"></Spinner>
+
+
+
+
+        </LinearLayout>
+
+    </ScrollView>
+
+
+    <Button
+        android:id="@+id/btnSave"
+        android:layout_alignParentBottom="true"
+        android:text="Save Data"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content" />
+
+
+
+</RelativeLayout>
