--- a/app/src/main/res/layout/fragment_form.xml
+++ b/app/src/main/res/layout/fragment_form.xml
@@ -97,6 +97,7 @@
                 android:layout_height="wrap_content" />
 
             <Spinner
+                android:layout_marginTop="6dp"
                 android:textColor="#004d40"
                 android:id="@+id/spnAge"
                 android:layout_width="match_parent"
@@ -113,6 +114,7 @@
                android:layout_height="wrap_content" />
 
             <Spinner
+                android:layout_marginTop="6dp"
                 android:textColor="#004d40"
                 android:id="@+id/spnStature"
                 android:layout_width="match_parent"
