--- a/app/src/main/res/layout/fragment_main.xml
+++ b/app/src/main/res/layout/fragment_main.xml
@@ -5,11 +5,29 @@
     android:layout_height="match_parent"
     tools:context=".MainFragment">
 
-    <!-- TODO: Update blank fragment layout -->
-    <TextView
-        android:textSize="@dimen/h1"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:text="This is MainFragment" />
+   <LinearLayout
+       android:layout_margin="30dp"
+       android:orientation="vertical"
+       android:layout_width="match_parent"
+       android:layout_height="wrap_content">
+
+   <VideoView
+       android:id="@+id/myVidioView"
+       android:layout_width="match_parent"
+       android:layout_height="200dp" />
+
+      <Button
+          android:text="Start"
+          android:id="@+id/btnStart"
+          android:layout_width="match_parent"
+          android:layout_height="wrap_content" />
+
+      <Button
+          android:text="Stop"
+          android:id="@+id/btnStop"
+          android:layout_width="match_parent"
+          android:layout_height="wrap_content" />
+
+   </LinearLayout>
 
 </FrameLayout>
